# ospyata

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tea.yaml
docs/: Error_policy.md  index.md
docs/source/: conf.py  index.rst
ospyata/: __version__.py  encryption.py  encryptionManagement.py  loadOMIO.py  manageOsmation.py  writeOMIO.py
src/ospyata/: Osmata.py  __init__.py  __version__.py  encryption.py  osmata.py
