[tool.poetry]
name = "ospyata"
version = "1.0.2"
description = "Python bindings for osmata."
authors = ["aerocyber"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
